--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -1,4 +1,4 @@
-<div class="alert-cl" id="alert-cl">
+<div class="alert-cl" id="alert-cl" style="display: none;">
     <div class="alert-cl-h">
         <div class="alert-cl-h-h" id="alert-cl-h-h">
             <h3 data-cl></h3>
@@ -89,6 +89,56 @@
 
         <div class="pps-s">
             <img src="/media/store/com.rarefrostbites.10.ya_ea/2.jpg" alt="">
+        </div>
+    </div>
+</div>
+
+<div class="pi-b1">
+    <div class="pi-b2">
+        <div class="pi-b3">
+            <div class="pi-b4">
+                <div class="pi-d">
+                    <h5>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit repellat minima consequuntur itaque aut, inventore perferendis vel voluptatem nobis illum? Voluptas repellat ratione tenetur tempora aliquam odit id doloribus quam.
+                    </h5>
+                </div>
+            
+                <hr>
+            
+                <div class="pi-m">
+                    <div class="tag_i">
+                        <div class="tags">
+                            <h2>TAGS:</h2>
+                        </div>
+                        <div class="tags_i">
+                            <div class="t b1">
+                                <div class="b2">
+                                    <h6>Chinese</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="genre_i">
+                        <div class="genres">
+                            <h2>GENRE:</h2>
+                        </div>
+                        <div class="genres_i">
+                            <div class="t b1">
+                                <div class="b2">
+                                    <h6>NA</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            
+                <!-- <div class="button" style="opacity: 0%;">
+                    <button>
+                        
+                    </button>
+                </div> -->
+            </div>
         </div>
     </div>
 </div>
