--- a/styles/store/com.rarefrostbites.10.ya_ea.css
+++ b/styles/store/com.rarefrostbites.10.ya_ea.css
@@ -299,9 +299,15 @@
     border: 3px #393939 solid;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (min-width: 320px) {
     .pi-b1 {
-        width: 300px;
+        width: 320px;
+    }
+}
+
+@media only screen and (min-width: 640px) {
+    .pi-b1 {
+        width: 640px;
     }
 }
 
@@ -389,11 +395,48 @@
     vertical-align: top;
 }
 .pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .genre_i .genres_i .t {
-    height: 28px;
+    height: 15px;
+    margin-top: 8px;
     margin-right: 8px;
     margin-bottom: 8px;
 }
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .genre_i .genres_i .b1 {
+    
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .genre_i .s {
 
-.body {
-    background-color: #ffffff6e;
+}
+
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .player_i {
+    display: flex;
+    width: auto;
+    height: auto;
+    justify-content: flex-start;
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .player_i .players h2 {
+    font-weight: lighter;
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .player_i .players_i {
+    display: flex;
+    width: auto;
+    height: auto;
+    margin-bottom: 3px;
+    margin-left: 8px;
+    overflow-x: hidden;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    transform: translateY(3px);
+    vertical-align: top;
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .player_i .players_i .t {
+    height: 15px;
+    margin-top: 8px;
+    margin-right: 8px;
+    margin-bottom: 8px;
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .player_i .players_i .b1 {
+    
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .player_i .s {
+
 }
