--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -129,6 +129,39 @@
                                     <h6>NA</h6>
                                 </div>
                             </div>
+
+                            <div class="t s">
+                                <h6>•</h6>
+                            </div>
+                            
+                            <div class="t b1">
+                                <div class="b2">
+                                    <h6>NA</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="player_i">
+                        <div class="players">
+                            <h2>PLAYERS:</h2>
+                        </div>
+                        <div class="players_i">
+                            <div class="t b1">
+                                <div class="b2">
+                                    <h6>NA</h6>
+                                </div>
+                            </div>
+
+                            <div class="t s">
+                                <h6>•</h6>
+                            </div>
+                            
+                            <div class="t b1">
+                                <div class="b2">
+                                    <h6>NA</h6>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
