--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -166,11 +166,13 @@
                     </div>
                 </div>
             
-                <!-- <div class="button" style="opacity: 0%;">
-                    <button>
-                        
-                    </button>
-                </div> -->
+                <div class="button">
+                    <div class="button-h-c">
+                        <button>
+                            <h3>Show More</h3>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
