--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -98,7 +98,7 @@
         <div class="pi-b3">
             <div class="pi-b4">
                 <div class="pi-d">
-                    <h5>
+                    <h5 id="pi-d">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit repellat minima consequuntur itaque aut, inventore perferendis vel voluptatem nobis illum? Voluptas repellat ratione tenetur tempora aliquam odit id doloribus quam.
                     </h5>
                 </div>
@@ -168,8 +168,8 @@
             
                 <div class="button">
                     <div class="button-h-c">
-                        <button>
-                            <h3>Show More</h3>
+                        <button id="button" onclick="readMore()">
+                            <h2 id="show" data-d-show>+</h2>
                         </button>
                     </div>
                 </div>
