--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -167,11 +167,9 @@
                 </div>
             
                 <div class="button">
-                    <div class="button-h-c">
-                        <button id="button" onclick="readMore()">
-                            <h2 id="show" data-d-show>+</h2>
-                        </button>
-                    </div>
+                    <button id="button" onclick="readMore()">
+                        <h2 id="show">+</h2>
+                    </button>
                 </div>
             </div>
         </div>
