--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -175,3 +175,7 @@
         </div>
     </div>
 </div>
+
+<div class="pr">
+    <div class="powr-reviews" id="80ab06c0_1655038097"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
+</div>
