--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -52,8 +52,8 @@
 </div>
 
 <div class="pps">
-    <div class="pps-h" >
-        <div class="pps-s" style="min-width: 320px;">
+    <div class="pps-h" style="max-width: 1060px;">
+        <div class="pps-s" style="min-width: 320px; align-items: normal;">
             <div class="fb-video" data-href="https://www.facebook.com/RareFrostbites/videos/808457726409849/" data-width="320" data-show-text="false">
                 <blockquote cite="https://www.facebook.com/RareFrostbites/videos/808457726409849/" class="fb-xfbml-parse-ignore" style="opacity: 0%;"><a href="https://www.facebook.com/RareFrostbites/videos/808457726409849/">Ya Ea - Texture Pack Trailer</a><p>Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure.
 
@@ -83,11 +83,11 @@
             </div>
         </div>
 
-        <div class="pps-s">
+        <div class="pps-s" style="min-width: 360px;">
             <img src="/media/store/com.rarefrostbites.10.ya_ea/1.jpg" alt="">
         </div>
 
-        <div class="pps-s">
+        <div class="pps-s" style="min-width: 360px;">
             <img src="/media/store/com.rarefrostbites.10.ya_ea/2.jpg" alt="">
         </div>
     </div>
