--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -98,9 +98,7 @@
         <div class="pi-b3">
             <div class="pi-b4">
                 <div class="pi-d">
-                    <h5 id="pi-d">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit repellat minima consequuntur itaque aut, inventore perferendis vel voluptatem nobis illum? Voluptas repellat ratione tenetur tempora aliquam odit id doloribus quam.
-                    </h5>
+                    <h5 id="pi-d" data-pd>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit repellat minima consequuntur itaque aut, inventore perferendis vel voluptatem nobis illum? Voluptas repellat ratione tenetur tempora aliquam odit id doloribus quam.</h5>
                 </div>
             
                 <hr>
@@ -108,12 +106,24 @@
                 <div class="pi-m">
                     <div class="tag_i">
                         <div class="tags">
-                            <h2>TAGS:</h2>
+                            <h2 data-tags>TAGS:</h2>
                         </div>
                         <div class="tags_i">
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6>Chinese</h6>
+                                    <h6 data-tags_i-Chinese>Chinese</h6>
+                                </div>
+                            </div>
+                            
+                            <div class="t b1">
+                                <div class="b2">
+                                    <h6 data-tags_i-Pixel_Art>Pixel Art</h6>
+                                </div>
+                            </div>
+                            
+                            <div class="t b1">
+                                <div class="b2">
+                                    <h6 data-tags_i-Stylized>Stylized</h6>
                                 </div>
                             </div>
                         </div>
@@ -121,12 +131,12 @@
 
                     <div class="genre_i">
                         <div class="genres">
-                            <h2>GENRE:</h2>
+                            <h2 data-genres>GENRE:</h2>
                         </div>
                         <div class="genres_i">
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6>NA</h6>
+                                    <h6 data-genres_i->NA</h6>
                                 </div>
                             </div>
 
@@ -136,7 +146,7 @@
                             
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6>NA</h6>
+                                    <h6 data-genres_i->NA</h6>
                                 </div>
                             </div>
                         </div>
@@ -144,12 +154,12 @@
 
                     <div class="player_i">
                         <div class="players">
-                            <h2>PLAYERS:</h2>
+                            <h2 data-players>PLAYERS:</h2>
                         </div>
                         <div class="players_i">
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6>NA</h6>
+                                    <h6 data-players_i->NA</h6>
                                 </div>
                             </div>
 
@@ -159,7 +169,7 @@
                             
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6>NA</h6>
+                                    <h6 data-players_i->NA</h6>
                                 </div>
                             </div>
                         </div>
