--- a/styles/store/com.rarefrostbites.10.ya_ea.css
+++ b/styles/store/com.rarefrostbites.10.ya_ea.css
@@ -343,7 +343,7 @@
 .pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .tag_i {
     display: flex;
     width: auto;
-    height: 39px;
+    min-height: 39px;
     justify-content: flex-start;
 }
 
@@ -384,7 +384,7 @@
 .pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .genre_i {
     display: flex;
     width: auto;
-    height: 39px;
+    min-height: 39px;
     justify-content: flex-start;
 }
 .pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .genre_i .genres h2 {
@@ -418,7 +418,7 @@
 .pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .player_i {
     display: flex;
     width: auto;
-    height: 39px;
+    min-height: 39px;
     justify-content: flex-start;
 }
 .pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .player_i .players h2 {
