--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -98,7 +98,7 @@
         <div class="pi-b3">
             <div class="pi-b4">
                 <div class="pi-d">
-                    <h5 id="pi-d" data-pd>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit repellat minima consequuntur itaque aut, inventore perferendis vel voluptatem nobis illum? Voluptas repellat ratione tenetur tempora aliquam odit id doloribus quam.</h5>
+                    <h5 id="pi-d" data->Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit repellat minima consequuntur itaque aut, inventore perferendis vel voluptatem nobis illum? Voluptas repellat ratione tenetur tempora aliquam odit id doloribus quam.</h5>
                 </div>
             
                 <hr>
