--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -98,7 +98,7 @@
         <div class="pi-b3">
             <div class="pi-b4">
                 <div class="pi-d">
-                    <h5 id="pi-d" data->Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure.</h5>
+                    <h5 id="pi-d" data-pd>Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure.</h5>
                 </div>
             
                 <hr>
