--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="d">
-            <a href="#">
+            <a href="/media/download/com.rarefrostbites.10.ya_ea/Ya Ea (V1).mcpack">
                 <div class="b">
                     <h3 data-pg></h3>
                 </div>
@@ -98,7 +98,7 @@
         <div class="pi-b3">
             <div class="pi-b4">
                 <div class="pi-d">
-                    <h5 id="pi-d" data-pd>Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure.</h5>
+                    <h5 id="pi-d" data-pd></h5>
                 </div>
             
                 <hr>
@@ -106,24 +106,24 @@
                 <div class="pi-m">
                     <div class="tag_i">
                         <div class="tags">
-                            <h2 data-tags>TAGS:</h2>
+                            <h2 data-tags></h2>
                         </div>
                         <div class="tags_i">
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-tags_i-Chinese>Chinese</h6>
+                                    <h6 data-tags_i-Chinese></h6>
                                 </div>
                             </div>
                             
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-tags_i-Pixel_Art>Pixel Art</h6>
+                                    <h6 data-tags_i-Pixel_Art></h6>
                                 </div>
                             </div>
                             
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-tags_i-Stylized>Stylized</h6>
+                                    <h6 data-tags_i-Stylized></h6>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
 
                     <div class="genre_i">
                         <div class="genres">
-                            <h2 data-genres>GENRE:</h2>
+                            <h2 data-genres></h2>
                         </div>
                         <div class="genres_i">
                             <div class="t b1">
@@ -154,7 +154,7 @@
 
                     <div class="player_i">
                         <div class="players">
-                            <h2 data-players>PLAYERS:</h2>
+                            <h2 data-players></h2>
                         </div>
                         <div class="players_i">
                             <div class="t b1">
