--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="d">
-            <a href="/media/download/com.rarefrostbites.10.ya_ea/Ya Ea (V1).mcpack">
+            <a href="/media/download/com.rarefrostbites.10.ya_ea/Ya Ea (V1).mcpack" download="Ya Ea (V1).mcpack">
                 <div class="b">
                     <h3 data-pg></h3>
                 </div>
