--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -38,7 +38,7 @@
             <img src="/media/store/assets/Share-RFB.svg" alt="">
         </button>
         
-        <a onClick="MyWindow=window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frfbcanary.pages.dev%2Fstore%2Fcom.rarefrostbites.10.ya_ea&amp;src=sdkpreparse','MyWindow','left=460,width=600,height=600'); return false;">
+        <a onClick="MyWindow=window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frfbcanary.pages.dev%2Fstore%2Fcom.rarefrostbites.10.ya_ea&amp;src=sdkpreparse','MyWindow','top=10,left=460,width=600,height=600'); return false;">
             <button>
                 <img src="/media/store/assets/Facebook-share.svg" alt="">
             </button>
