--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -16,7 +16,7 @@
             <h2 data-pt></h2>
         </div>
         <div class="pa">
-            <a href="#">
+            <a href="/store/@rarefrostbites">
                 <h4 data-pa></h4>
             </a>
         </div>
@@ -33,17 +33,17 @@
 
 <div class="share">
     <div class="holder">
-        <input type="text" id="cl" value="https://rfbcanary.pages.dev/store/com.rarefrostbites.10.ya_ea" readonly/>
+        <input type="text" id="cl" value="https://rarefrostbites.pages.dev/store/com.rarefrostbites.10.ya_ea" readonly/>
         <button onclick="copy('cl')">
             <img src="/media/store/assets/Share-RFB.svg" alt="">
         </button>
         
-        <a onClick="MyWindow=window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frfbcanary.pages.dev%2Fstore%2Fcom.rarefrostbites.10.ya_ea&amp;src=sdkpreparse','MyWindow','top=10,left=460,width=600,height=600'); return false;">
+        <a onClick="MyWindow=window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frarefrostbites.pages.dev%2Fstore%2Fcom.rarefrostbites.10.ya_ea&amp;src=sdkpreparse','MyWindow','top=10,left=460,width=600,height=600'); return false;">
             <button>
                 <img src="/media/store/assets/Facebook-share.svg" alt="">
             </button>
         
-        <a onClick="MyWindow=window.open('https://www.reddit.com/submit?url=https://rfbcanary.pages.dev/store/com.rarefrostbites.10.ya_ea&title=Check%20Ya%20Ea%20made%20on%20RFB%20Store','MyWindow','top=100,left=460,width=600,height=600'); return false;">
+        <a onClick="MyWindow=window.open('https://www.reddit.com/submit?url=https://rarefrostbites.pages.dev/store/com.rarefrostbites.10.ya_ea&title=Check%20Ya%20Ea%20made%20on%20RFB%20Store','MyWindow','top=100,left=460,width=600,height=600'); return false;">
             <button>
                 <img src="/media/store/assets/Reddit-share.svg" alt="">
             </button>
@@ -111,12 +111,6 @@
                         <div class="tags_i">
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-tags_i-Chinese></h6>
-                                </div>
-                            </div>
-                            
-                            <div class="t b1">
-                                <div class="b2">
                                     <h6 data-tags_i-Pixel_Art></h6>
                                 </div>
                             </div>
@@ -136,11 +130,11 @@
                         <div class="genres_i">
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-genres_i->NA</h6>
+                                    <h6 data-genres_i-Chinese>Chinese</h6>
                                 </div>
                             </div>
 
-                            <div class="t s">
+                            <!-- <div class="t s">
                                 <h6>•</h6>
                             </div>
                             
@@ -148,11 +142,11 @@
                                 <div class="b2">
                                     <h6 data-genres_i->NA</h6>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
-                    <div class="player_i">
+                    <!-- <div class="player_i">
                         <div class="players">
                             <h2 data-players></h2>
                         </div>
@@ -173,7 +167,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             
                 <div class="button">
