--- a/styles/store/pack/header.css
+++ b/styles/store/pack/header.css
@@ -16,3 +16,10 @@
     width: 20px;
     height: 20px;
 }
+
+
+@media only screen and (max-width: 800px) {
+    .body .header a {
+        margin-left: 25px;
+    }
+}
