--- a/components/store/index/content.html
+++ b/components/store/index/content.html
@@ -2,25 +2,25 @@
     <a href="#">
         <div class="pe">
             <img src="/media/store/assets/RFB Maps.png" alt="">
-            <h3>Maps</h3>
+            <h3 data-rfbstore-filter-maps>Maps</h3>
         </div>
     </a>
     <a href="#">
         <div class="pe">
             <img src="/media/store/assets/RFB Texture Packs.png" alt="">
-            <h3>Texture Packs</h3>
+            <h3 data-rfbstore-filter-texture_packs>Texture Packs</h3>
         </div>
     </a>
     <a href="#">
         <div class="pe">
             <img src="/media/store/assets/RFB Skin Packs.png" alt="">
-            <h3>Skin Packs</h3>
+            <h3 data-rfbstore-filter-skin_packs>Skin Packs</h3>
         </div>
     </a>
     <a href="#">
         <div class="pe">
             <img src="/media/store/assets/RFB Mash-up Packs.png" alt="">
-            <h3>Mash-up Packs</h3>
+            <h3 data-rfbstore-filter-mash-up_packs>Mash-up Packs</h3>
         </div>
     </a>
 </div>
