--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -43,7 +43,7 @@
                 <img src="/media/store/assets/Facebook-share.svg" alt="">
             </button>
         
-        <a onClick="MyWindow=window.open('https://www.reddit.com/submit?url=https://rarefrostbites.pages.dev/store/com.rarefrostbites.10.ya_ea&title=Check%20Ya%20Ea%20made%20on%20RFB%20Store','MyWindow','top=100,left=460,width=600,height=600'); return false;">
+        <a onClick="MyWindow=window.open('https://www.reddit.com/submit?url=https://rarefrostbites.pages.dev/store/com.rarefrostbites.10.ya_ea&title=Check%20out%20Ya%20Ea%20made%20on%20RFB%20Store','MyWindow','top=100,left=460,width=600,height=600'); return false;">
             <button>
                 <img src="/media/store/assets/Reddit-share.svg" alt="">
             </button>
@@ -130,7 +130,7 @@
                         <div class="genres_i">
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-genres_i-Chinese>Chinese</h6>
+                                    <h6 data-genres_i-Chinese></h6>
                                 </div>
                             </div>
 
