--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -38,7 +38,7 @@
             <img src="/media/store/assets/Share-RFB.svg" alt="">
         </button>
         
-        <a onClick="MyWindow=window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frarefrostbites.pages.dev%2Fstore%2Fcom.rarefrostbites.10.ya_ea&amp;src=sdkpreparse','MyWindow','top=10,left=460,width=600,height=600'); return false;">
+        <a onClick="MyWindow=window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frarefrostbites.pages.dev%2Fstore%2Fcom.rarefrostbites.10.ya_ea&amp;src=sdkpreparse','MyWindow','top=100,left=460,width=600,height=600'); return false;">
             <button>
                 <img src="/media/store/assets/Facebook-share.svg" alt="">
             </button>
@@ -52,7 +52,7 @@
 </div>
 
 <div class="pps">
-    <div class="pps-h" style="max-width: 1060px;">
+    <div class="pps-h" style="max-width: 1430px;">
         <div class="pps-s" style="min-width: 320px; align-items: normal;">
             <div class="fb-video" data-href="https://www.facebook.com/RareFrostbites/videos/808457726409849/" data-width="320" data-show-text="false">
                 <blockquote cite="https://www.facebook.com/RareFrostbites/videos/808457726409849/" class="fb-xfbml-parse-ignore" style="opacity: 0%;"><a href="https://www.facebook.com/RareFrostbites/videos/808457726409849/">Ya Ea - Texture Pack Trailer</a><p>Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure.
@@ -89,6 +89,10 @@
 
         <div class="pps-s" style="min-width: 360px;">
             <img src="/media/store/com.rarefrostbites.10.ya_ea/2.jpg" alt="">
+        </div>
+
+        <div class="pps-s" style="min-width: 360px;">
+            <img src="/media/store/com.rarefrostbites.10.ya_ea/3.jpg" alt="">
         </div>
     </div>
 </div>
