--- a/components/store/com.rarefrostbites.9.rarechristmas_bundle.html
+++ b/components/store/com.rarefrostbites.9.rarechristmas_bundle.html
@@ -7,13 +7,13 @@
 </div>
 
 <div class="hp">
-    <div class="pi t">
-        <img src="/media/store/com.rarefrostbites.10.ya_ea.jpg" alt="Ya Ea">
+    <div class="pi s">
+        <img src="/media/store/com.rarefrostbites.9.rarechristmas_bundle.jpg" alt="Ya Ea">
     </div>
 
-    <div class="ph t">
+    <div class="ph s">
         <div class="tt">
-            <h2 data-pt></h2>
+            <h2 data->RareChristmas Bundle</h2>
         </div>
         <div class="pa">
             <a href="/store/@rarefrostbites">
@@ -21,8 +21,8 @@
             </a>
         </div>
 
-        <div class="d t">
-            <a href="/media/download/com.rarefrostbites.10.ya_ea/Ya Ea (V1).mcpack" download="Ya Ea (V1).mcpack">
+        <div class="d s">
+            <a href="/media/download/com.rarefrostbites.9.rarechristmas_bundle/RareChristmas Bundle (V1).mcpack" download="RareChristmas Bundle (V1).mcpack">
                 <div class="b">
                     <h3 data-pg></h3>
                 </div>
