--- a/styles/store/com.rarefrostbites.10.ya_ea.css
+++ b/styles/store/com.rarefrostbites.10.ya_ea.css
@@ -50,7 +50,7 @@
 
 
 .hp {
-    width: 872px;
+    width: 768px;
     display: flex;
     vertical-align: top;
     margin-top: 80px;
@@ -58,25 +58,48 @@
     margin-left: auto;
 }
 
-.hp .t {
+.hp .pi.m, .hp .pi.s {
+    width: 200px;
+    height: 115.25px;
+    margin-right: 50px;
+}
+.hp .pi.m img, .hp .pi.s img {
+    width: 200px;
+    height: 115.25px;
+}
+
+.hp .pi.t, .hp .pi.mu {
     width: 200px;
     height: 200px;
     margin-right: 50px;
 }
-.hp .t img {
+.hp .pi.t img, .hp .pi.mu img {
     width: 200px;
     height: 200px;
 }
 
 .hp .ph {
-    width: 300px;
+    display: flex;
+    min-width: 518px;
     margin-top: 20px;
+    vertical-align: top;
+    flex-direction: column;
 }
+.hp .ph.m, .hp .ph.s {
+    margin-right: 0px;
+    min-height: 173px;
+} 
+.hp .ph.t, .hp .ph.mu {
+    margin-right: 0px;
+    min-height: 258px;
+} 
 .hp .ph .tt h2 {
     font-family: "Mojangles", "Unicode";
+    overflow-wrap: break-word;
 }
 .hp .ph .pa {
     margin-top: 20px;
+    margin-bottom: auto;
 }
 .hp .ph .pa a h4 {
     color: #00ffba;
@@ -87,8 +110,14 @@
 .hp .ph .d {
     width: 300px;
     height: 60px;
-    margin-left: 320px;
-    margin-top: 50px;
+    margin-right: 0px;
+    margin-left: auto;
+}
+.hp .ph .d.m, .hp .ph .d.s {
+    margin-top: 18px;
+}
+.hp .ph .d.t, .hp .ph .d.mu {
+    margin-top: 18px;
 }
 .hp .ph .d a .b {
     width: 300px;
@@ -116,6 +145,7 @@
 }
 .hp .ph .d a .b h3 {
     color: #4c4c4c;
+    text-align: right;
 }
 .hp .ph .d a .b:hover h3 {
     color: #ffffff;
@@ -125,52 +155,9 @@
     transform: translateY(5px);
 }
 
-@media only screen and (min-width: 320px) {
-    .hp {
-        width: 320px;
-    }
-
-    .hp .t {
-        width: 100px;
-        height: 100px;
-        margin-right: 25px;
-    }
-    .hp .t img {
-        width: 100px;
-        height: 100px;
-    }
-
-    .hp .ph {
-        width: 190px;
-        margin-top: 10px;
-    }
-
-    .hp .ph .d {
-        margin-left: -114px;
-    }
+@media only screen and (max-width: 768px) {
+    
 }
-
-
-@media only screen and (min-width: 640px) {
-    .hp {
-        width: 640px;
-    }
-
-    .hp .ph .d {
-        margin-left: 215px;
-    }
-}
-
-
-/* @media only screen and (min-width: 768px) {
-    .hp {
-        width: 768px;
-    }
-
-    .hp .ph .d {
-        margin-left: 215px;
-    }
-} */
 
 
 .share {
