--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -97,6 +97,7 @@
     </div>
 </div>
 
+<!-- Pack Information -->
 <div class="pi-b1">
     <div class="pi-b2">
         <div class="pi-b3">
@@ -175,14 +176,40 @@
                 </div>
             
                 <div class="button">
-                    <button id="button" onclick="readMore()">
-                        <h2 id="show">+</h2>
+                    <button id="button-d" onclick="readMorePD()">
+                        <h2 id="show-d">+</h2>
                     </button>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<!-- Changelogs -->
+<!-- <div class="pi-b1">
+    <div class="pi-b2">
+        <div class="pi-b3">
+            <div class="pi-b4">
+                <div class="pi-chlgs">
+                    <h5 id="pi-chlgs-unread">WWWWWWWWWWWWWWW<br>
+
+                        WWWWW
+                    </h5>
+                </div>
+
+                <div class="pi-cr" id="pi-cr">
+                    <h5 onclick="readMoreCHLGS()" data->Continue reading...</h5>
+                </div>
+
+                <div class="button">
+                    <button id="button-chlgs" onclick="readMoreCHLGS()">
+                        <h2 id="show-chlgs">+</h2>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> -->
 
 <div class="pr">
     <div class="powr-reviews" id="80ab06c0_1655038097"></div>
