--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -191,7 +191,7 @@
         <div class="pi-b3">
             <div class="pi-b4">
                 <div class="pi-chlgs">
-                    <h5 id="pi-chlgs-unread">WWWWWWWWWWWWWWW<br>
+                    <h5 id="pi-chlgs-unread">WWWWWWWWWWWWWWW<br><br>
 
                         WWWWW
                     </h5>
